--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "mongoose": "^7.0.3",
+    "cors": "^2.8.5" ,
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12"
   }
