--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "stock-tracker-backend",
+  "name": "stock-app-backend",
   "version": "1.0.0",
+  "description": "Backend for Stock Tracker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^8.0.0",
+    "yahoo-finance2": "^2.11.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
