--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
-    "yahoo-finance2": "^2.11.3"
+    "yahoo-finance2": "^2.11.3",
+    "node-fetch": "^2.6.7"
   },
   "engines": {
     "node": ">=18.0.0"
