--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "stock-app-backend",
   "version": "1.0.0",
-  "description": "Backend for Stock Tracker",
+  "description": "Taiwan Stock Tracking System Backend",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "yahoo-finance2": "^2.11.3",
-    "node-fetch": "^2.6.7"
+    "mongoose": "^7.5.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^2.7.0",
+    "yahoo-finance2": "^2.11.2"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=16.0.0"
   }
 }
